ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/disable-admission-webhook: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: wisecow.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wisecow-service
                port:
                  number: 4499
  tls:
    - hosts:
        - wisecow.example.com
      secretName: wisecow-tls-secret
